v1.6
Ensure "Realm Works" is displayed with the registered trademark symbol in all places.

v1.5
This release allows you to type in some free text into a snippet, or choose a tag for a choice field, instead of having CSV data appear in the field.
You can't mix CSV data and free text in the same snippet (yet) though.
It also fixes a bug where sometimes a partition in the structure part of the XML file would wrongly get text attached to it.

v1.4
The entire topic, as well as the optional containing topic, can now be marked as REVEALED to players (using the circular button to the left of topic name).
This updates the existing functionality where individual snippets could be marked as revealed.

v1.3.1
A minor update to add validation to the new optional parent. You must enter a name, and you must choose a different category for the parent to the one chosen for the CSV data.

v1.3
Provide the option to have all imported topics/articles placed under a single parent category.

v1.2
The installer now adds the application to the Start Menu.
Fixed a bug with the layout of elements when there was a blank snippet in the template.

v1.1
Name of the topic/article is now mandatory.
In tag snippets, the annotation is correctly placed before the tag_assign.
Installer files are now part of the software sources on github.
Empty cells in the CSV now don't provide the corresponding snippet (previously it put an empty string into the snippet).
Prevent crash if the CSV had less entries in a data row than was in the header row.
Remove the "gm_only" button since it isn't the way that Realm Works® does thing.

v1.0.0
The top drop-down menu does nothing.